updating index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Page 1</title>
+  <title>Lab 1</title>
 </head>
 <body>
   <p>&amp; Welcome to my webiste</p>
