--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Lab 1</title>
 </head>
 <body>
-  <p>&amp; Welcome to my webiste</p>
+  <p>Welcome to my webiste</p>
   <p>Name: Carlos Amaya</p>
   <p>Major: Psychology with a minor in ITM<p>
   <p>Year: Second year<p>
